Opened 16 years ago
Closed 16 years ago
#3553 closed bug (fixed)
[diffutils] STRERROR_R_CHAR_P is defined to 1
Reported by: | Adek336 | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Command Line Tools | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
src/bin/diffutils/config.h:
1259 /* Define to 1 if strerror_r returns char *. */ 1260 #define STRERROR_R_CHAR_P 1
It should be #undef STRERROR_R_CHAR_P
Note:
See TracTickets
for help on using tickets.
Should be fixed in hrev29499.