Out strerror_t returns int, not char. Fixes ticket #3553. Thanks, Adrian!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29499 a95241bf-73f2-0310-859d-f6bbb57e9c96